--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,7 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -35,6 +36,15 @@ jobs:
 
     - name: Build with Gradle Wrapper
       run: ./gradlew build
+    - uses: actions/upload-artifact@v4
+      with: 
+    # Name of the artifact to upload.
+    # Optional. Default is 'artifact'
+        name: eruda
+
+    # A file, directory or wildcard pattern that describes what to upload
+    # Required.
+        path: app/build/outputs/apk/*.apk
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
