--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,9 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.2.0-rc01"
     implementation 'androidx.webkit:webkit:1.15.0-alpha03'
     implementation 'com.squareup.okhttp3:okhttp:5.2.1'
+    implementation "androidx.activity:activity-ktx:1.12.0-alpha09"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0-alpha05"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.10.0-alpha05"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
+    
 }
