--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,13 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 }
 
 dependencies {
+    implementation "androidx.constraintlayout:constraintlayout:2.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.core:core-ktx:1.17.0'
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation "androidx.core:core-splashscreen:1.2.0-rc01"
