--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,27 +37,11 @@ jobs:
           build-scan-terms-of-use-agree: "yes"
 
     - name: Build with Gradle Wrapper
-      run: ./gradlew assemble
+      run: ./gradlew assemble --warning-mode all
     - uses: actions/upload-artifact@v4
       with: 
-    # Name of the artifact to upload.
-    # Optional. Default is 'artifact'
         name: eruda
-
-    # A file, directory or wildcard pattern that describes what to upload
-    # Required.
         path: app/build/outputs/apk/
-
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
 
   dependency-submission:
 
